--- a/brand_teacher/less/style.less
+++ b/brand_teacher/less/style.less
@@ -6,10 +6,10 @@
 @text-light-color: #fff;
 @text-dark-color: #000;
 @block-color: #232323;
-@light-color: #E4E5E7;
+@light-color: #ffffff;
 @lines-color: #616161;
 @shadow-color: #b6b6b6;
-@block-sq-color: #ececec;
+@block-sq-color: #fcfcfc;
 
 /* fonts */
 @second-title-font: "Ledger", sans-serif;
@@ -50,9 +50,30 @@
     font-display: swap;
 }
 
+
+@media screen and (min-width: 992px) {
+    .btn {
+        width: 25%;
+    }
+    .competence__slider {
+        &--preview {
+            width: 90%;
+        }
+        .slick-current &--preview {
+            margin-top: 160px;
+        }
+        .slick-track {
+            grid-template-columns: repeat(auto-fill, minmax(200px, 770px));
+            column-gap: 10em;
+        }
+        &--item {
+            padding: 45px 55px;
+        }
+    }
+}
+
 /* basic elements */
 body, a {
-    background-color: @block-color;
     color: @text-dark-color;
     font-size: 14px;
     font-family: @main-font;
@@ -60,6 +81,9 @@ body, a {
     text-decoration: none;
     letter-spacing: 0.09em;
     line-height: 120%;
+}
+body {
+    background-color: @block-color;
 }
 main {
     position: relative;
@@ -102,20 +126,63 @@ ul, ol, p, figure, h1, h2, h3, h4 {
     letter-spacing: 0.09em;
     &:hover {
         background-color: @btn-color;
-        opacity: 0.5;
-        color: @text-dark-color;
+        opacity: 0.7;
+        cursor: pointer;
     }
 }
 
 /* header */
 .header {
-    color: @text-light-color;
     padding-top: 35px;
     &__list {
         margin-bottom: 0;
         display: flex;
         justify-content: space-between;
-        font-size: 20px;
+        a {
+            font-size: 16px;
+            color: @text-light-color;
+        }
+    }
+    &__nav-close {
+        display: none;
+        width: 48px;
+        height: 48px;
+        position: absolute;
+        top: 35px;
+        right: 30px;
+    }
+    &__burger {
+        width: 48px;
+        height: 15px;
+        display: none;
+        position: relative;
+        .burger__line {
+            display: block;
+            width: 100%;
+            height: 1px;
+            background-color: #000;
+            position: absolute;
+            &:first-child {
+                top: 0;
+            }
+            &:last-child {
+                bottom: 0;
+            }
+        }
+    }
+    &__nav-close-line {
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: #000;
+        position: absolute;
+        top: 50%;
+        &:first-child {
+            transform: translateY(-50%) rotate(45deg);
+        }
+        &:last-child {
+            transform: translateY(-50%) rotate(-45deg);
+        }
     }
 }
 
@@ -280,16 +347,26 @@ ul, ol, p, figure, h1, h2, h3, h4 {
         -moz-border-radius: 25px;
         border-radius: 25px;
     }
-    .lorem_sq {
-        width: 200px;
-        height: 200px;
-        background-color: @text-light-color;
-        border-radius: 25px;
+    &--figure {
         position: absolute;
-        margin-top: 10.5%;
+        right: -100px;
         top: 0;
-        right: -9.5%;
-        left: auto;
+        bottom: 0;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        svg {
+            position: absolute;
+            left: -50%;
+        }
+        .lorem_sq {
+            position: relative;
+            width: 200px;
+            height: 200px;
+            background-color: @text-light-color;
+            box-shadow: 20px 0px 150px 0 @btn-color;
+            border-radius: 25px;
+        }
     }
     &--title {
         text-align: left;
@@ -532,6 +609,8 @@ ul, ol, p, figure, h1, h2, h3, h4 {
             width: 1106px;
         }
         &--img {
+            display: flex;
+            justify-content: center;
             img {
                 border-radius: 50%;
             }
@@ -569,7 +648,10 @@ ul, ol, p, figure, h1, h2, h3, h4 {
             -moz-border-radius: 25px;
             border-radius: 25px;
 
-            box-shadow: 0 4px 20px 0 @shadow-color;
+            box-shadow: 0 4px 20px 0 @shadow-color; 
+            img {
+                width: auto;
+            }
         }
         .owl-carousel .owl-stage {
             transition-timing-function: linear !important;
@@ -617,6 +699,8 @@ ul, ol, p, figure, h1, h2, h3, h4 {
     color: @text-light-color;
     &__accordion {
         margin-top: 50px;
+        position: relative;
+        z-index: 2000;
         &-box {
             border-top: 1px solid @lines-color;
             &:last-child {
@@ -638,7 +722,8 @@ ul, ol, p, figure, h1, h2, h3, h4 {
             }
             span {
                 transform: rotate(0);
-                transition: transform 0.5s ease-in-out;                
+                transition: transform 0.5s ease-in-out;
+                margin-right: 25px;               
             }
             &.active span {
                 transform: rotate(45deg);
@@ -863,7 +948,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
     }
     
     .circles li:nth-child(3){
-        transform: translate(63%, -25%);
+        transform: translate(60%, -25%);
         animation: animate_third 5s ease-in-out infinite;
     }
     
@@ -872,13 +957,13 @@ ul, ol, p, figure, h1, h2, h3, h4 {
             transform: translate(0, -25%);
         }
         25% {
-            transform: translate(63%, -25%);
+            transform: translate(60%, -25%);
         }
         50% {
             transform: translate(33%, 0);
         }
         75% {
-            transform: translate(63%, -25%);
+            transform: translate(60%, -25%);
         }
         100% {
             transform: translate(0, -25%);
@@ -892,7 +977,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
             transform: translate(0, -25%);
         }
         50% {
-            transform: translate(63%, -25%);
+            transform: translate(60%, -25%);
         }
         75% {
             transform: translate(0, -25%)
@@ -903,7 +988,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
     }
     @keyframes animate_third {
         0% {
-            transform: translate(63%, -25%);
+            transform: translate(60%, -25%);
         }
         25% {
             transform: translate(33%, 0);
@@ -915,7 +1000,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
             transform: translate(33%, 0);
         }
         100% {
-            transform: translate(63%, -25%);
+            transform: translate(60%, -25%);
         }
     }
 
@@ -924,7 +1009,6 @@ ul, ol, p, figure, h1, h2, h3, h4 {
         z-index: 2000;
     }
 }
-
 
 /* contacts */
 .contacts {
@@ -974,3 +1058,107 @@ ul, ol, p, figure, h1, h2, h3, h4 {
         display: flex;
     }
 }
+
+/* cookies */
+.cookies {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 25px;
+    position: fixed;
+    max-width: 400px;
+    color: @text-dark-color;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 120%;
+    letter-spacing: 0.09em;
+    bottom: 2rem;
+    right: 7.625rem;
+    z-index: 3000;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    gap: 70px;
+    visibility: hidden;
+    &.opened {
+        transform: translateY(0);
+        visibility: visible;
+    }
+    &_text {
+        max-width: 195px;
+    }
+    &_file {
+        text-decoration: underline;
+        font-weight: 300;
+        font-size: 12px;
+        line-height: 120%;
+        letter-spacing: 0.09em;
+    }
+    &_accept {
+        padding: 15px 30px;
+        background: @btn-color;
+        border: none;
+        border-radius: 15px;
+        max-width: 80px;
+        color: @text-light-color;
+        font-weight: 500;
+        letter-spacing: 0.09em;
+        text-transform: uppercase;
+    }
+    &_accept:hover {
+        opacity: 0.7;
+        cursor: pointer;
+    }
+}
+
+// @media screen and (min-width: 768px) {
+
+// }
+
+// @media screen and (min-width: 576px) {
+//     .header {
+//         .container {
+//             display: flex;
+//             justify-content: end;
+//         }
+//         &__burger {
+//             display: block;
+//         }
+//         &__nav-close {
+//             display: block;
+//             align-self: end;
+//         }
+//         &__box {
+//             display: flex;
+//             flex-direction: column-reverse;
+//             justify-content: center;
+
+//             width: 100vw;
+//             height: 100vh;
+//             position: fixed;
+//             top: 0;
+//             left: 0;
+//             background-color: @light-color;
+//             z-index: 10;
+//             padding: 35px 30px;
+//             transform: translateX(100%);
+//             transition: .2s all linear;
+//         }
+//         &__box-active {
+//             transform: translateX(0);
+//         }
+//         &__list {
+//             flex-direction: column;
+//             align-items: center;
+//         }
+//         &__item:not(:last-child) {
+//             margin-bottom: 60px;
+//         }
+//         a {
+//             color: @text-dark-color;
+//         }
+//     }
+// }
+
+// @media screen and (min-width: 320px) {
+
+// }
