--- a/brand_teacher/less/style.less
+++ b/brand_teacher/less/style.less
@@ -197,7 +197,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
         z-index: -100;
     }
     &__image {
-        background-image: url(https://www.dummyimage.com/645x521/bfbfbf/fff.jpg);
+        background-image: url(./img/png/basic_img.png);
         background-repeat: no-repeat;
         background-size: 100% 100%;
         width: 100%;
