--- a/brand_teacher/css/style.css
+++ b/brand_teacher/css/style.css
@@ -173,7 +173,7 @@ h4 {
   z-index: -100;
 }
 .intro__image {
-  background-image: url(https://www.dummyimage.com/645x521/bfbfbf/fff.jpg);
+  background-image: url(img/png/basic_img.png);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   width: 100%;
